--- a/.vsconfig
+++ b/.vsconfig
@@ -3,8 +3,6 @@
 	"components": [
 		"Microsoft.VisualStudio.Workload.NativeDesktop",
 		"microsoft.visualstudio.component.vc.diagnostictools",
-		"microsoft.visualstudio.component.windows10sdk.14393",
-		"component.microsoft.windows.driverkit",
-		"component.vsinstallerprojects"
+		"microsoft.visualstudio.component.windows10sdk.14393"
 	]
 }
