--- a/Solutions/Paladin Extensions/PX CSGO/PX CSGO.vcxproj
+++ b/Solutions/Paladin Extensions/PX CSGO/PX CSGO.vcxproj
@@ -180,10 +180,12 @@
     <ClInclude Include="SDK\Valve\Interfaces\ICollideable.hpp" />
     <ClInclude Include="SDK\Valve\Interfaces\IEngineTrace.hpp" />
     <ClInclude Include="SDK\Valve\Interfaces\IInputSystem.hpp" />
+    <ClInclude Include="SDK\Valve\Interfaces\IMaterialSystem.hpp" />
     <ClInclude Include="SDK\Valve\Interfaces\Interfaces.hpp" />
     <ClInclude Include="SDK\Valve\Interfaces\IPanel.hpp" />
     <ClInclude Include="SDK\Valve\Interfaces\ISurface.hpp" />
     <ClInclude Include="SDK\Valve\Interfaces\IVEngineClient.hpp" />
+    <ClInclude Include="SDK\Valve\Interfaces\IViewRender.hpp" />
     <ClInclude Include="SDK\Valve\Interfaces\IVModelInfoClient.hpp" />
     <ClInclude Include="SDK\Valve\Interfaces\IVModelRender.hpp" />
     <ClInclude Include="SDK\Valve\Math\Math.hpp" />
