--- a/Solutions/Paladin Extensions/PX CSGO/PX CSGO.vcxproj
+++ b/Solutions/Paladin Extensions/PX CSGO/PX CSGO.vcxproj
@@ -187,7 +187,7 @@
     <ClInclude Include="SDK\Valve\Interfaces\IPanel.hpp" />
     <ClInclude Include="SDK\Valve\Interfaces\ISurface.hpp" />
     <ClInclude Include="SDK\Valve\Interfaces\IVEngineClient.hpp" />
-    <ClInclude Include="SDK\Valve\Interfaces\IViewRender.hpp" />
+    <ClInclude Include="SDK\Valve\Interfaces\IVRenderView.hpp" />
     <ClInclude Include="SDK\Valve\Interfaces\IVModelInfoClient.hpp" />
     <ClInclude Include="SDK\Valve\Interfaces\IVModelRender.hpp" />
     <ClInclude Include="SDK\Valve\Math\Math.hpp" />
