--- a/Solutions/Paladin Extensions/PX CSGO/PX CSGO.vcxproj
+++ b/Solutions/Paladin Extensions/PX CSGO/PX CSGO.vcxproj
@@ -108,6 +108,7 @@
     <ClCompile Include="Features\Awareness\Statistics.cpp" />
     <ClCompile Include="Features\Awareness\Materials.cpp" />
     <ClCompile Include="Features\Combat\Aim Assist.cpp" />
+    <ClCompile Include="Features\Combat\Recoil Compensation.cpp" />
     <ClCompile Include="Features\Combat\Trigger.cpp" />
     <ClCompile Include="Features\Features.cpp" />
     <ClCompile Include="Features\Miscellaneous\Movement.cpp" />
@@ -166,6 +167,7 @@
     <ClInclude Include="Features\Awareness\Statistics.hpp" />
     <ClInclude Include="Features\Awareness\Materials.hpp" />
     <ClInclude Include="Features\Combat\Aim Assist.hpp" />
+    <ClInclude Include="Features\Combat\Recoil Compensation.hpp" />
     <ClInclude Include="Features\Combat\Trigger.hpp" />
     <ClInclude Include="Features\Features.hpp" />
     <ClInclude Include="Features\Miscellaneous\Movement.hpp" />
@@ -233,6 +235,9 @@
     <ProjectReference Include="..\PX Framework\PX Framework.vcxproj">
       <Project>{808d007e-abfb-4c41-b85f-601066ece0fb}</Project>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Features\Features.inl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
