--- a/Solutions/Paladin Extensions/PX CSGO/PX CSGO.vcxproj
+++ b/Solutions/Paladin Extensions/PX CSGO/PX CSGO.vcxproj
@@ -194,6 +194,7 @@
     <ClInclude Include="SDK\Valve\Interfaces\ICVar.hpp" />
     <ClInclude Include="SDK\Valve\Interfaces\IEngineTrace.hpp" />
     <ClInclude Include="SDK\Valve\Interfaces\IInputSystem.hpp" />
+    <ClInclude Include="SDK\Valve\Interfaces\ILocalize.hpp" />
     <ClInclude Include="SDK\Valve\Interfaces\IMaterialSystem.hpp" />
     <ClInclude Include="SDK\Valve\Interfaces\Interfaces.hpp" />
     <ClInclude Include="SDK\Valve\Interfaces\IPanel.hpp" />
@@ -222,6 +223,7 @@
     <ClInclude Include="SDK\Valve\Types\Enumerations.hpp" />
     <ClInclude Include="SDK\Valve\Types\GlowOutlineEffect.hpp" />
     <ClInclude Include="SDK\Valve\Types\IHandleEntity.hpp" />
+    <ClInclude Include="SDK\Valve\Types\PaintKit.hpp" />
     <ClInclude Include="SDK\Valve\Types\platform.hpp" />
     <ClInclude Include="SDK\Valve\Types\Recv.hpp" />
     <ClInclude Include="SDK\Valve\Types\Studio.hpp" />
