--- a/Solutions/Paladin Extensions/PX CSGO/PX CSGO.vcxproj
+++ b/Solutions/Paladin Extensions/PX CSGO/PX CSGO.vcxproj
@@ -200,6 +200,7 @@
     <ClInclude Include="SDK\Valve\Interfaces\IMaterialSystem.hpp" />
     <ClInclude Include="SDK\Valve\Interfaces\Interfaces.hpp" />
     <ClInclude Include="SDK\Valve\Interfaces\IPanel.hpp" />
+    <ClInclude Include="SDK\Valve\Interfaces\IRefCounted.hpp" />
     <ClInclude Include="SDK\Valve\Interfaces\ISurface.hpp" />
     <ClInclude Include="SDK\Valve\Interfaces\IVEngineClient.hpp" />
     <ClInclude Include="SDK\Valve\Interfaces\IVRenderView.hpp" />
