--- a/Solutions/Paladin Extensions/PX CSGO/PX CSGO.vcxproj
+++ b/Solutions/Paladin Extensions/PX CSGO/PX CSGO.vcxproj
@@ -100,6 +100,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Application\Game Events.cpp" />
     <ClCompile Include="Application\Hooks.cpp" />
     <ClCompile Include="Application\Information.cpp" />
     <ClCompile Include="Design\User Interface.cpp" />
@@ -113,6 +114,7 @@
     <ClCompile Include="Features\Features.cpp" />
     <ClCompile Include="Features\Miscellaneous\Inventory.cpp" />
     <ClCompile Include="Features\Miscellaneous\Movement.cpp" />
+    <ClCompile Include="Features\Miscellaneous\Other.cpp" />
     <ClCompile Include="Features\Miscellaneous\Visuals.cpp" />
     <ClCompile Include="PX CSGO.cpp" />
     <ClCompile Include="SDK\Tools.cpp" />
@@ -160,6 +162,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\PX Precompiled.hpp" />
+    <ClInclude Include="Application\Game Events.hpp" />
     <ClInclude Include="Application\Hooks.hpp" />
     <ClInclude Include="Application\Information.hpp" />
     <ClInclude Include="Design\User Interface.hpp" />
@@ -173,6 +176,7 @@
     <ClInclude Include="Features\Features.hpp" />
     <ClInclude Include="Features\Miscellaneous\Inventory.hpp" />
     <ClInclude Include="Features\Miscellaneous\Movement.hpp" />
+    <ClInclude Include="Features\Miscellaneous\Other.hpp" />
     <ClInclude Include="Features\Miscellaneous\Visuals.hpp" />
     <ClInclude Include="PX CSGO.hpp" />
     <ClInclude Include="SDK\Definitions.hpp" />
@@ -195,6 +199,7 @@
     <ClInclude Include="SDK\Valve\Interfaces\IConVar.hpp" />
     <ClInclude Include="SDK\Valve\Interfaces\ICVar.hpp" />
     <ClInclude Include="SDK\Valve\Interfaces\IEngineTrace.hpp" />
+    <ClInclude Include="SDK\Valve\Interfaces\IGameEventManager.hpp" />
     <ClInclude Include="SDK\Valve\Interfaces\IInputSystem.hpp" />
     <ClInclude Include="SDK\Valve\Interfaces\ILocalize.hpp" />
     <ClInclude Include="SDK\Valve\Interfaces\IMaterialSystem.hpp" />
