--- a/Solutions/Paladin Extensions/PX CSGO/PX CSGO.vcxproj
+++ b/Solutions/Paladin Extensions/PX CSGO/PX CSGO.vcxproj
@@ -100,6 +100,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Application\Engine Prediction.cpp" />
     <ClCompile Include="Application\Game Events.cpp" />
     <ClCompile Include="Application\Hooks.cpp" />
     <ClCompile Include="Application\Information.cpp" />
@@ -162,6 +163,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\PX Precompiled.hpp" />
+    <ClInclude Include="Application\Engine Prediction.hpp" />
     <ClInclude Include="Application\Game Events.hpp" />
     <ClInclude Include="Application\Hooks.hpp" />
     <ClInclude Include="Application\Information.hpp" />
@@ -200,11 +202,14 @@
     <ClInclude Include="SDK\Valve\Interfaces\ICVar.hpp" />
     <ClInclude Include="SDK\Valve\Interfaces\IEngineTrace.hpp" />
     <ClInclude Include="SDK\Valve\Interfaces\IGameEventManager.hpp" />
+    <ClInclude Include="SDK\Valve\Interfaces\IGameMovement.hpp" />
     <ClInclude Include="SDK\Valve\Interfaces\IInputSystem.hpp" />
     <ClInclude Include="SDK\Valve\Interfaces\ILocalize.hpp" />
     <ClInclude Include="SDK\Valve\Interfaces\IMaterialSystem.hpp" />
+    <ClInclude Include="SDK\Valve\Interfaces\IMoveHelper.hpp" />
     <ClInclude Include="SDK\Valve\Interfaces\Interfaces.hpp" />
     <ClInclude Include="SDK\Valve\Interfaces\IPanel.hpp" />
+    <ClInclude Include="SDK\Valve\Interfaces\IPrediction.hpp" />
     <ClInclude Include="SDK\Valve\Interfaces\IRefCounted.hpp" />
     <ClInclude Include="SDK\Valve\Interfaces\ISurface.hpp" />
     <ClInclude Include="SDK\Valve\Interfaces\IVEngineClient.hpp" />
