--- a/Solutions/Paladin Extensions/PX CSGO/PX CSGO.vcxproj
+++ b/Solutions/Paladin Extensions/PX CSGO/PX CSGO.vcxproj
@@ -200,6 +200,7 @@
     <ClInclude Include="SDK\Valve\Interfaces\ICollideable.hpp" />
     <ClInclude Include="SDK\Valve\Interfaces\IConVar.hpp" />
     <ClInclude Include="SDK\Valve\Interfaces\ICVar.hpp" />
+    <ClInclude Include="SDK\Valve\Interfaces\IEngineSound.hpp" />
     <ClInclude Include="SDK\Valve\Interfaces\IEngineTrace.hpp" />
     <ClInclude Include="SDK\Valve\Interfaces\IGameEventManager.hpp" />
     <ClInclude Include="SDK\Valve\Interfaces\IGameMovement.hpp" />
@@ -213,6 +214,7 @@
     <ClInclude Include="SDK\Valve\Interfaces\IRefCounted.hpp" />
     <ClInclude Include="SDK\Valve\Interfaces\ISurface.hpp" />
     <ClInclude Include="SDK\Valve\Interfaces\IVEngineClient.hpp" />
+    <ClInclude Include="SDK\Valve\Interfaces\IViewRenderBeams.hpp" />
     <ClInclude Include="SDK\Valve\Interfaces\IVRenderView.hpp" />
     <ClInclude Include="SDK\Valve\Interfaces\IVModelInfoClient.hpp" />
     <ClInclude Include="SDK\Valve\Interfaces\IVModelRender.hpp" />
