--- a/Solutions/Paladin Extensions/PX CSGO/PX CSGO.vcxproj
+++ b/Solutions/Paladin Extensions/PX CSGO/PX CSGO.vcxproj
@@ -207,6 +207,7 @@
     <ClInclude Include="SDK\Valve\Interfaces\ICVar.hpp" />
     <ClInclude Include="SDK\Valve\Interfaces\IEngineSound.hpp" />
     <ClInclude Include="SDK\Valve\Interfaces\IEngineTrace.hpp" />
+    <ClInclude Include="SDK\Valve\Interfaces\IFileSystem.hpp" />
     <ClInclude Include="SDK\Valve\Interfaces\IGameEventManager.hpp" />
     <ClInclude Include="SDK\Valve\Interfaces\IGameMovement.hpp" />
     <ClInclude Include="SDK\Valve\Interfaces\IInputSystem.hpp" />
