--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "Source/Dependencies/Include/json"]
 	path = Source/Dependencies/Include/json
 	url = https://github.com/nlohmann/json
+[submodule "Source/Dependencies/Include/curl"]
+	path = Source/Dependencies/Include/curl
+	url = https://github.com/curl/curl
